Initial header upload

--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,25 @@
     content: "";
     clear: both;
 }
+
+ul {
+    list-style: none;
+}
+
+ul > li {
+    display: inline-block;
+    text-transform: uppercase;
+    margin-right: 5px;
+    font-size: 13px;
+}
+
 /* /Functional */
 
 
 /* Page */
 body {
-    background-color:aquamarine
+    background-color:aquamarine;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header, footer, .imgSlideshow, .articleContent, .mainArticle {
@@ -30,7 +43,7 @@ header, footer, .imgSlideshow, .articleContent, .mainArticle {
 
 header {
     height: 120px;
-    background-color: lightskyblue;
+    /* background-color: lightskyblue; */
 }
 
 footer {
@@ -43,9 +56,11 @@ nav {
 }
 
 .myLogo {
-    width:150px;
+    width:110px;
     height: 60%;
-    background-color: darkblue;
+    background-image: url('../img/logo.png');
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .menuOptions {
