--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,16 @@ ul > li {
     font-size: 13px;
 }
 
+ul > li, .articleTitle p {
+    color: #b7b7b7;
+}
+
 /* /Functional */
 
 
 /* Page */
 body {
-    background-color:aquamarine;
+    /* background-color:aquamarine; */
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -36,9 +40,9 @@ header, footer, .imgSlideshow, .articleContent, .mainArticle {
 }
 
 .pageContent {
-    width: 80%;
+    width: 85%;
     margin: auto;
-    background-color: cadetblue;
+    /* background-color: cadetblue; */
 }
 
 header {
@@ -47,7 +51,7 @@ header {
 
 footer {
     height: 90px;
-    background-color: mediumaquamarine;
+    /* background-color: mediumaquamarine; */
 }
 
 nav {
@@ -64,12 +68,12 @@ nav {
 
 .menuOptions {
     height: 40%;
-    background-color: darkcyan;
+    /* background-color: darkcyan; */
 }
 
 .imgSlideshow {
     height: 320px;
-    background-image: url('../img/banner.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0.15)),url('../img/banner.jpg');
     background-size: 100% auto;
     background-repeat: no-repeat;
     background-position: center center;
@@ -77,7 +81,7 @@ nav {
 }
 
 .imgTitle1 {
-    padding-top: 30%;
+    padding-top: 27%;
     margin-left: 5%;
     width: 55%;
     font-size: 20px;
@@ -97,17 +101,21 @@ nav {
 
 .articleContent {
     height: 550px;
-    background-color: darkslategray;
+    /* background-color: darkslategray; */
 }
 
 .articleTitle {
-    height: 15%;
-    background-color: dodgerblue;
+    height: 12%;
+    /* background-color: dodgerblue; */
 }
 
 .articleTitle h1{
-    margin-top: 15px;
+    margin-top: 20px;
     font-size: 25px;
+}
+
+.articleTitle p {
+    font-size: 14px;
 }
 
 .mainArticle {
@@ -117,27 +125,65 @@ nav {
 .centerColumn {
     height: 100%;
     width: 50%;
-    background-color: teal;
+    /* background-color: teal; */
     float: left;
+    padding: 0 2% 0 2%;
 }
 
 .leftColumn, .rightColumn {
     height: 100%;
     width: 25%;
-    background-color: lightskyblue;
+    /* background-color: lightskyblue; */
     float: left;
 }
 
 .sideImg, .centerImg {
     height: 150px;
     width: 100%;
-}
-
-.sideImg {
-    background-color: midnightblue;
+    border-radius: 10px;
 }
 
 .centerImg {
-    background-color: navy;
+    background: linear-gradient(rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0.15)),url('../img/banner-2.jpg');
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+    background-position: center 70%;
+}
+
+#first {
+    background: linear-gradient(rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0.15)),url('../img/img-1.jpg');
+    background-size: 100% auto;
+}
+
+#second {
+    background: linear-gradient(rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0.15)),url('../img/img-3.jpg');
+    background-size: auto 100%;
+}
+
+#first, #second {
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.textContent {
+    margin-top: 25px;
+}
+
+.textContent > h4 {
+    padding-bottom: 10px;
+    font-weight: normal;
+}
+
+.textContent > span {
+    color: #cccccc;
+    font-size: 15px;
+}
+
+.sideImg {
+    /* background-color: midnightblue; */
+}
+
+.centerImg {
+    /* background-color: navy; */
 }
 /* /Page */
