--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ ul > li, .articleTitle p {
 /* Page */
 body {
     /* background-color:aquamarine; */
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 header, footer, .imgSlideshow, .articleContent, .mainArticle {
@@ -50,8 +50,9 @@ header {
 }
 
 footer {
-    height: 90px;
-    /* background-color: mediumaquamarine; */
+    height: 45px;
+    text-align: center;
+    font-size: 15px;
 }
 
 nav {
@@ -81,17 +82,19 @@ nav {
 }
 
 .imgTitle1 {
-    padding-top: 27%;
+    padding-top: 25%;
     margin-left: 5%;
     width: 55%;
-    font-size: 20px;
+    font-size: 22px;
+    line-height: 19px;
     color: white;
 }
 
 .imgTitle2 {
-    margin-left: 5%;
+    margin: 5px 0 0 5%;
     width: 50%;
-    font-size: 12px;
+    font-size: 14px;
+    line-height: 15px;
     color: white;
 }
 
@@ -100,7 +103,7 @@ nav {
 }
 
 .articleContent {
-    height: 550px;
+    height: 500px;
     /* background-color: darkslategray; */
 }
 
@@ -124,7 +127,7 @@ nav {
 
 .centerColumn {
     height: 100%;
-    width: 50%;
+    width: 55%;
     /* background-color: teal; */
     float: left;
     padding: 0 2% 0 2%;
@@ -132,7 +135,7 @@ nav {
 
 .leftColumn, .rightColumn {
     height: 100%;
-    width: 25%;
+    width: 22.5%;
     /* background-color: lightskyblue; */
     float: left;
 }
@@ -167,6 +170,7 @@ nav {
 
 .textContent {
     margin-top: 25px;
+    line-height: 16px;
 }
 
 .textContent > h4 {
@@ -177,6 +181,11 @@ nav {
 .textContent > span {
     color: #cccccc;
     font-size: 15px;
+}
+
+.footerText::after {
+    content: ' \2764';
+    color: red;
 }
 
 .sideImg {
