--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,6 @@ ul > li, .articleTitle p {
 
 /* Page */
 body {
-    /* background-color:aquamarine; */
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -42,7 +41,6 @@ header, footer, .imgSlideshow, .articleContent, .mainArticle {
 .pageContent {
     width: 85%;
     margin: auto;
-    /* background-color: cadetblue; */
 }
 
 header {
@@ -69,7 +67,6 @@ nav {
 
 .menuOptions {
     height: 40%;
-    /* background-color: darkcyan; */
 }
 
 .imgSlideshow {
@@ -104,12 +101,11 @@ nav {
 
 .articleContent {
     height: 500px;
-    /* background-color: darkslategray; */
 }
 
 .articleTitle {
     height: 12%;
-    /* background-color: dodgerblue; */
+    margin-bottom: 17px;
 }
 
 .articleTitle h1{
@@ -128,7 +124,6 @@ nav {
 .centerColumn {
     height: 100%;
     width: 55%;
-    /* background-color: teal; */
     float: left;
     padding: 0 2% 0 2%;
 }
@@ -136,7 +131,6 @@ nav {
 .leftColumn, .rightColumn {
     height: 100%;
     width: 22.5%;
-    /* background-color: lightskyblue; */
     float: left;
 }
 
@@ -169,7 +163,7 @@ nav {
 }
 
 .textContent {
-    margin-top: 25px;
+    margin-top: 20px;
     line-height: 16px;
 }
 
@@ -186,13 +180,5 @@ nav {
 .footerText::after {
     content: ' \2764';
     color: red;
-}
-
-.sideImg {
-    /* background-color: midnightblue; */
-}
-
-.centerImg {
-    /* background-color: navy; */
 }
 /* /Page */
